# Bai-tap-ROS-Giua-Ky

./: README.md
rosgkfinal/: CMakeLists.txt  package.xml
rosgkfinal/config/: joint_names_rosgkfinal.yaml
rosgkfinal/launch/: display.launch  final.launch  gazebo.launch
rosgkfinal/meshes/: base_link.STL  camera_link.STL  imu_link.STL  lb_link.STL  lf_link.STL  prismatic_link.STL  rb_link.STL  revolute_link.STL  rf_link.STL
rosgkfinal/rviz/: rviz.rviz
rosgkfinal/scripts/: controller.py  encoder.py  jointcontrol.py
rosgkfinal/urdf/: rosgkfinal.csv  rosgkfinal.urdf
